--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,17 +3,18 @@
   "name": "Original Taste",
   "icons": [
     {
-      "src": "/logo.png",
+      "src": "/logo192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "/logo.png",
+      "src": "/logo512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
   ],
-  "start_url": ".",
+  "start_url": "/",
+  "scope": "/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#ffffff"
